<resources>
    <string name="app_name">IoTIC</string>
    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="play_guest">Play as Guest</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create new account</string>
    <string name="register">Sign Up</string>
    <string name="hello_label">"Hello {username}!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="single_player">Single player</string>
    <string name="multi_player">Multi player</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>

    <string name="device_description_label">"Description: {description}"</string>
    <string name="device_time_label">"Time created: {time}!"</string>
    <string name="device_name_label">"Device: {name}"</string>

    <string name="sensor_type_label">"Name: {type}"</string>
    <string name="sensor_time_label">"Time created: {time}"</string>
    <string name="sensor_measureUnit_label">"Unit of measurement: {measureUnit}"</string>
    <string name="sensor_device_label">"Device: {device}"</string>

</resources>
